--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.168",
     "@types/node": "^15.0.1",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
@@ -23,6 +24,9 @@
     "npm": "7.11.1"
   },
   "dependencies": {
-    "dotenv": "^8.2.0"
+    "discord.js": "^12.5.3",
+    "dotenv": "^8.2.0",
+    "firebase-admin": "^9.7.0",
+    "lodash": "^4.17.21"
   }
 }
