--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "npm": "7.11.1"
   },
   "dependencies": {
+    "discord-reply": "^0.1.2",
     "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
     "firebase-admin": "^9.7.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1"
   }
 }
